<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/zone_edit_tip_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zone_edit_tip"
        android:textAppearance="?attr/textAppearanceListItem"/>

    <TextView
        android:id="@+id/zone_edit_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@id/zone_edit_tip_txt"
        android:layout_below="@id/zone_edit_tip_txt"
        android:text="@string/zone_edit_name_label" />
    <EditText
        android:id="@+id/zone_edit_name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/zone_edit_name_txt"
        android:layout_alignBaseline="@id/zone_edit_name_txt" />

    <Button
        android:id="@+id/zone_edit_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/zone_edit_name_txt"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/common_save_return_text"/>

</RelativeLayout>